--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <link rel="stylesheet" href="styles.css" />
   </head>
+
   <body>
     <header>
       <nav>
@@ -27,13 +28,11 @@
           Trabook <img src="./images/Vector.png" alt="logo" />
         </div>
         <div class="nav-list">
-          <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>Destination</li>
-            <li>Tour</li>
-            <li>Blog</li>
-          </ul>
+          <a href="">Home</a>
+          <a href="">About</a>
+          <a href="">Destination</a>
+          <a href="">Tour</a>
+          <a href="">Blog</a>
         </div>
         <div class="buttons">
           <button class="login">Login</button>
@@ -57,7 +56,7 @@
             desire place.
           </p>
           <br /><br />
-          <button>Discover Now</button>
+          <button type="button">Discover Now</button>
         </div>
         <div class="image">
           <img src="./images/Image.png" alt="Tourist with thumbs up" />
@@ -84,105 +83,375 @@
       </div>
     </div>
 
-    <div class="container1">
-      <div class="card">
-        <div class="content">
-          <div class="todo">
-            <h1>Things you need <span>to do</span></h1>
-          </div>
-          <div class="para">
-            <p>We ensure that you’ll embark on a perfectly planned,<br /></p>
-            <p>vacation at a price you can afford.</p>
-          </div>
+    <div class="section2">
+      <div class="container2">
+        <div class="thing">
+          <p class="xl">Things you need <span>to do</span></p>
+          <br />
+          <p class="small-text">
+            We ensure that you’ll embark on a perfectly planned, <br />
+            safe vacation at a price you can afford.
+          </p>
         </div>
-        <div class="image">
-          <img src="./images/Element.png" alt="" />
-        </div>
+        <img src="./images/Element.png" alt="" />
       </div>
 
-      <div class="package">
-        <div class="sticker">
-          <img src="./images/Group.png" alt="Group Icon" />
-          <h2>Signup</h2>
-          <p>Completes all the work associated with planning and processing.</p>
-        </div>
+      <br />
 
-        <div class="sticker">
-          <img src="./images/Vector (2).png" alt="Group Icon" />
-          <h2>Worth of Money</h2>
+      <div class="cardContainer">
+        <div class="card">
+          <img src="./images/Group.png" alt="" />
+          <p class="bold">Sign Up</p>
           <p>
-            After successful access then book from exclusive deals & pricing.
+            Completes all the work associated <br />
+            with planning and processing
           </p>
         </div>
 
-        <div class="sticker">
-          <img src="./images/Group (1).png" alt="Group Icon" />
-          <h2>Exiting Travel</h2>
-          <p>Start and explore a wide range of exciting travel experience.</p>
+        <div class="card">
+          <img src="./images/Vector (2).png" alt="" />
+          <p class="bold">Worth of Money</p>
+          <p>
+            Completes all the work associated <br />
+            with planning and processing
+          </p>
+        </div>
+
+        <div class="card">
+          <img src="./images/Group (1).png" alt="" />
+          <p class="bold">Exciting Travel</p>
+          <p>
+            Completes all the work associated <br />
+            with planning and processing
+          </p>
         </div>
       </div>
     </div>
 
-    <div class="container2">
-      <div class="card2">
-        <div class="content2">
-          <div class="todo">
-            <h1>Exclusive <span>deals & discounts</span></h1>
-          </div>
-          <div class="para">
-            <p>
-              Discover our fantastic early booking discounts <br />
-              & start planning your journey.
-            </p>
+    <div class="section3">
+      <div class="divContainer1">
+        <p class="xl">Exclusive <span>deals & discounts</span></p>
+        <br />
+        <p class="small">
+          Discover our fantastic early booking discounts <br />
+          & start planning your journey.
+        </p>
+      </div>
+      <br />
+      <div class="cardContainer">
+        <div class="card2">
+          <img src="./images/Image 2.png" />
+          <div class="contentContainer">
+            <div class="textContainer">
+              <p>Madrid</p>
+              <p><i class="fa-solid fa-location-dot"></i>Spain</p>
+            </div>
+            <div class="priceContainer">
+              <p><i class="fa-solid fa-star"></i>4.8</p>
+              <span class="strike">$950</span>
+              <span class="colored">$850</span>
+            </div>
           </div>
         </div>
 
-        <div class="package2">
-          <div class="container3">
-            <div class="sticker1">
-              <img src="./images/Image 2.png" alt="City of Madrid" />
-              <h2>Madrid <i class="fa-solid fa-star"></i> 4.8</h2>
-              <p><i class="fa-solid fa-location-dot"></i> Spain</p>
-              <p>
-                <span class="old-price">$950</span>
-                <span class="colored">$850</span>
-              </p>
+        <div class="card2">
+          <img src="./images/tower.png" />
+          <div class="contentContainer">
+            <div class="textContainer">
+              <p>Firenze</p>
+              <p><i class="fa-solid fa-location-dot"></i>Italy</p>
             </div>
-
-            <div class="sticker1">
-              <img src="./images/Image 2.png" alt="City of Madrid" />
-              <h2>Madrid <i class="fa-solid fa-star"></i> 4.8</h2>
-              <p><i class="fa-solid fa-location-dot"></i> Spain</p>
-              <p>
-                <span class="old-price">$950</span>
-                <span class="colored">$850</span>
-              </p>
+            <div class="priceContainer">
+              <p><i class="fa-solid fa-star"></i>4.5</p>
+              <span class="strike">$850</span>
+              <span class="colored">$750</span>
             </div>
+          </div>
+        </div>
 
-            <div class="sticker1">
-              <img src="./images/Image 2.png" alt="City of Madrid" />
-              <h2>Madrid <i class="fa-solid fa-star"></i> 4.8</h2>
-              <p><i class="fa-solid fa-location-dot"></i> Spain</p>
-              <p>
-                <span class="old-price">$950</span>
-                <span class="colored">$850</span>
-              </p>
+        <div class="card2">
+          <img src="./images/Image (1).png" />
+          <div class="contentContainer">
+            <div class="textContainer">
+              <p>Paris</p>
+              <p><i class="fa-solid fa-location-dot"></i>France</p>
             </div>
+            <div class="priceContainer">
+              <p><i class="fa-solid fa-star"></i>4.4</p>
+              <span class="strike">$699</span>
+              <span class="colored">$599</span>
+            </div>
+          </div>
+        </div>
 
-            <div class="sticker1">
-              <img src="./images/Image 2.png" alt="City of Madrid" />
-              <div class="flex">
-                <h2>Madrid <i class="fa-solid fa-star"></i> 4.8</h2>
-                <p><i class="fa-solid fa-location-dot"></i> Spain</p>
-                <p>
-                  <span class="old-price">$950</span>
-                  <span class="colored">$850</span>
-                </p>
-              </div>
+        <div class="card2">
+          <img src="./images/Image (5).png" />
+          <div class="contentContainer">
+            <div class="textContainer">
+              <p>London</p>
+              <p><i class="fa-solid fa-location-dot"></i>UK</p>
+            </div>
+            <div class="priceContainer">
+              <p><i class="fa-solid fa-star"></i>4.8</p>
+              <span class="strike">$850</span>
+              <span class="colored">$850</span>
             </div>
           </div>
         </div>
       </div>
+    </div>
+
+    <div class="arrowButtons">
+      <img src="./images/Btn-1.png" alt="button" />
+      <img src="./images/Btn-2.png" alt="button" />
+    </div>
+
+    <div class="section4">
+      <div class="container2">
+        <div class="thing">
+          <p class="xl">Best <span>Vaction Plan</span></p>
+          <br />
+          <p class="small-text">
+            Plan your perfect vacation with our travel agency. Choose <br />
+            among hundreds of all-inclusive offers!
+          </p>
+        </div>
+        <img src="./images/tree.png" alt="tree" />
+      </div>
+      <br />
+      <div class="arrowButtons1">
+        <img src="./images/Btn-1.png" alt="button" />
+        <img src="./images/Btn-2.png" alt="button" />
+      </div>
+
+      <div class="cardContainer">
+        <div class="card2">
+          <img src="./images/Image (4).png" />
+          <div class="contentContainer">
+            <div class="textContainer">
+              <p>Rome,Itally</p>
+              <p><i class="fa-solid fa-location-arrow"></i>10 days trip</p>
+            </div>
+            <div class="priceContainer">
+              <span class="colored">$5.42k</span>
+              <p><i class="fa-solid fa-star"></i>4.8</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="card2">
+          <img src="./images/Image (5).png" />
+          <div class="contentContainer">
+            <div class="textContainer">
+              <p>London,UK</p>
+              <p><i class="fa-solid fa-location-arrow"></i>7 days trip</p>
+            </div>
+            <div class="priceContainer">
+              <span class="colored">$2,42k</span>
+              <p><i class="fa-solid fa-star"></i>4.7</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="card2">
+          <img src="./images/Image (7).png" />
+          <div class="contentContainer">
+            <div class="textContainer">
+              <p>Osaka,Japan</p>
+              <p><i class="fa-solid fa-location-arrow"></i>10 days trip</p>
+            </div>
+            <div class="priceContainer">
+              <span class="colored">$5.42k</span>
+              <p><i class="fa-solid fa-star"></i>4.8</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="section5">
+      <div class="text-content">
+        <h1>What people say<br /><span>about us.</span></h1>
+        <p>
+          Our Clients send us a bunch of smiles with our services and we love
+          them.
+        </p>
+        <div class="buttons1">
+          <button class="left-arrow">
+            <i class="fa-solid fa-arrow-left"></i>
+          </button>
+          <br />
+          <button class="right-arrow">
+            <i class="fa-solid fa-arrow-right"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="testimonial-wrapper">
+        <div class="card card-top">
+          <img src="./images/Image (8).png" alt="Mike Taylor" class="avatar" />
+
+          <p class="quote">
+            "On the Windows talking pointed posture yet its express parties use.
+            Sure last upon he same as knew next. Of believed or diverted no."
+          </p>
+          <div class="author">Mike taylor</div>
+          <div class="location">Lahore, Pakistan</div>
+        </div>
+        <div class="card-bottom">
+          <div class="author-info">
+            <div class="author">Chris Thomas</div>
+            <div class="role">CEO of Red Button</div>
+          </div>
+        </div>
+      </div>
+      <div class="doddle"><img src="./images/Element (1).png" alt="" /></div>
+    </div>
+
+    <div class="section6">
+      <div class="textContainer">
+        <h1>Get update with <span>latest blog</span></h1>
+      </div>
+
+      <div class="cardsContainer">
+        <div class="blogsCard">
+          <img src="./images/Image (9).png" alt="resort" />
+          <div class="textArea">
+            <p>
+              The Amazing Difference a <br />
+              Year of Travelling .
+            </p>
+          </div>
+          <div class="year">
+            <p>July 27, 2021</p>
+          </div>
+        </div>
+
+        <div class="blogsCard">
+          <img src="./images/Image (10).png" alt="resort" />
+          <div class="textArea">
+            <p>
+              Travel far enough, you <br />
+              meet yourself.
+            </p>
+          </div>
+          <div class="year">
+            <p>July 27, 2021</p>
+          </div>
+        </div>
+
+        <div class="blogsCard">
+          <img src="./images/Image (11).png" alt="resort" />
+          <div class="textArea">
+            <p>
+              How to Save Money While <br />
+              Visiting Africa .
+            </p>
+          </div>
+          <div class="year">
+            <p>July 27, 2021</p>
+          </div>
+        </div>
+
+        <div class="blogsCard">
+          <img src="./images/Image (12).png" alt="resort" />
+          <div class="textArea">
+            <p>
+              Reflections on 5 Months of <br />
+              Travel: Time to Hang
+            </p>
+          </div>
+          <div class="year">
+            <p>July 27, 2021</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="slider">
+        <img src="./images/Slider.png" alt="" />
+      </div>
+    </div>
+
+    <div class="subscription">
+      <div class="box">
+        <h1>
+          Subscribe and get exclusive <br />
+          deals & offer
+        </h1>
+        <div class="mailInput">
+          <label for="email"></label>
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Enter your email"
+          />
+          <div class="emailIcon">
+            <i class="fa-regular fa-envelope"></i>
+          </div>
+        </div>
+        <input type="button" value="Subscribe" />
+      </div>
+      <div class="doddleG">
+        <img src="./images/Group 42.png" alt="" />
+      </div>
+      <div class="doddleT">
+        <img src="./images/tree2.png" alt="" />
+      </div>
+      <div class="doddleTr">
+        <img src="./images/tree2.png" alt="" />
+      </div>
+    </div>
+
+    <footer>
+      <div class="trabook">
+        <h2>Trabook <img src="./images/Vector.png" alt="logo" /></h2>
+        <p>
+          Book your trip in minute, get full <br />
+          Control for much longer.
+        </p>
+        <div class="social">
+          <img src="./images/Social (1).png" alt="" />
+          <img src="./images/Social.png" alt="" />
+          <img src="./images/Social (2).png" alt="" />
+        </div>
+      </div>
+
+      <div class="list1">
+        <ul>
+          <li class="bolder">Company</li>
+          <li>About</li>
+          <li>Careers</li>
+          <li>Logistics</li>
+          <li>Privacy & Policy</li>
+        </ul>
+      </div>
+
+      <div class="list1">
+        <ul>
+          <li class="bolder">Contact</li>
+          <li>Help/FAQ</li>
+          <li>Press</li>
+          <li>Affiliates</li>
+        </ul>
+      </div>
+
+      <div class="list1">
+        <ul>
+          <li class="bolder">More</li>
+          <li>Press Center</li>
+          <li>Our Blog</li>
+          <li>Low fare tips</li>
+        </ul>
+      </div>
+    </footer>
+    <div class="hr-container">
+      <hr />
+    </div>
+
+    <div class="copy">
+      <p>Copyright, Trabook 2022. All rights reserved.</p>
+      <p>Terms & Conditions</p>
     </div>
   </body>
 </html>
